apps/database/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: database
  labels:
    name: database
